Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,6 @@
-# Maven
-# Build your Java project and run tests with Apache Maven.
-# Add steps that analyze code, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/java
-
+variables:
+ - name: SONAR_ORGANIZATION
+ 
 trigger:
 - feature-*
 
@@ -14,7 +12,7 @@ steps:
   inputs:
     SonarCloud: 'sonarcloud'
     scannerMode: 'Other'
-    organization: '${{ secret.SONAR_ORGANIZATION}}'
+    organization: '${{ SONAR_ORGANIZATION }}'
 - task: Maven@3
   inputs:
     mavenPomFile: 'pom.xml'
