Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ steps:
   inputs:
     SonarCloud: 'sonarcloud'
     scannerMode: 'Other'
-    organization: '${{ SONAR_ORGANIZATION }}'
+    organization: '$(SONAR_ORGANIZATION)'
 - task: Maven@3
   inputs:
     mavenPomFile: 'pom.xml'
