Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ steps:
 - task: SonarCloudPrepare@1
   inputs:
     SonarCloud: 'sonarcloud'
-    organization: '$(SONAR_ORGANIZATION)'
+    organization: 'danielmorganse'
     scannerMode: 'Other'
 - task: Maven@3
   inputs:
