--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,6 +32,11 @@ steps:
     goals: 'package'
     sonarQubeRunAnalysis: true
     isJacocoCoverageReportXML: true
+- task: PublishCodeCoverageResults@1
+  displayName: 'Publish code coverage'
+  inputs:
+    codeCoverageTool: Jacoco
+    summaryFileLocation: 'coverage.xml'
 - task: SonarCloudPublish@1
 - task: BuildQualityChecks@8
   inputs:
@@ -39,3 +44,4 @@ steps:
     coverageFailOption: 'fixed'
     coverageType: 'branches'
     coverageThreshold: '85'
+
