- Se agrega tag parametrico de imagen docker

--- a/deployment-app.yaml
+++ b/deployment-app.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: mss-demo-lab
-        image: devdams/devops-foundation-v3-ms-spring
+        image: devdams/devops-foundation-v3-ms-spring:$(Build.BuildId)
         ports:
         - containerPort: 8080
