- Se corrige definición de tag como variable en script de despliegue en kubernetes

--- a/deployment-app.yaml
+++ b/deployment-app.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: mss-demo-lab
-        image: devdams/devops-foundation-v3-ms-spring:$(Build.BuildId)
+        image: devdams/devops-foundation-v3-ms-spring:${imageTag}
         ports:
         - containerPort: 8080
