Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,7 +46,9 @@ steps:
   inputs:
     connectionType: 'None'
     command: 'apply'
-    arguments: '-f deployment-app.yaml'
+    #arguments: '-f deployment-app.yaml'
+    useConfigurationFile: true
+    configuration: 'deployment-app.yaml'
     secretType: 'dockerRegistry'
     containerRegistryType: 'Container Registry'
     dockerRegistryEndpoint: 'dockerhub-personal'
